# Lab_teste_control

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: app_config.yaml
controle_equipamentos/: README.md  __init__.py  classificar.py  config.py  enviar_email.py  io_utils.py  ler_emprestimos.py  ler_planilha.py  localizacao_atual.py  main.py  modelos.py  relatorio_html.py
controle_equipamentos/config/: config.yaml
controle_equipamentos/tests/: test_classificar.py  test_enviar_email.py  test_ler_emprestimos.py  test_ler_planilha.py  test_localizacao_atual.py
esda14v2l_calculator/: app.js  calc.js  index.html  style.css
esda14v2l_calculator/test/: calc.test.mjs
scripts/: setup_env.ps1  setup_env.sh
src/: config.py  logger.py  version.py
src/core/: sampling_buffer.py  state_machine.py
src/database/: database.py  models.py  repositories.py
src/drivers/: base_instrument.py  exceptions.py  scpi.py  serial_driver.py  simulated_serial.py
src/gui/: evaluation_view.py  main_window.py  manual_output_dialog.py  registration_view.py  (+1 more)
tests/: e363x_simulator.py  test_branding_assets.py  test_branding_config.py  test_delete_history.py  test_gui_smoke.py  test_manual_output_range.py  test_power_supply_ranges.py  test_range_feedback.py  test_reports.py  test_repositories.py  test_sampling_buffer.py  test_scpi.py  test_serial_driver.py  test_serial_simulation.py  test_simulated_source.py  test_state_machine.py  test_test_parameters_off_duration.py  test_test_parameters_range.py  test_version.py
(+23 files in other folders)
