[project]
name = "fct-avibras"
version = "0.3.0"
description = "Sistema de Teste Funcional (FCT) - Avibras Aeroco"
requires-python = ">=3.10,<3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Os testes usam apenas funções, nunca classes. Sem isso, o pytest tenta
# coletar TestState/TestSession/TestParameterConfig (nomes de domínio que
# começam com "Test") como classes de teste e emite warnings falsos.
python_classes = ["*NoClassBasedTests"]
markers = [
    "gui: testes que requerem display Qt (pular no CI headless com -m 'not gui')",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
